Fix text/word overflow issue in question divs

--- a/client/views/helpers/chunks/question_div/question_div.scss
+++ b/client/views/helpers/chunks/question_div/question_div.scss
@@ -25,6 +25,7 @@ $popular-question-color: #f1c40f;
   margin-bottom: 12px;
   border-radius: $border-radius;
   width: 22em;
+  word-break: break-all;
 
   .image-icon {
     width: 14px;
